--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</ul>
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link btn btn-success" href="#">Realizza un video!</a>
+						<a class="nav-link btn btn-outline-danger" href="#">Realizza un video!</a>
 					</li>
 				</ul>
 			</div>
@@ -69,11 +69,12 @@
 				</div>
 			</div>
 		</header>
+		
 		<!--Regolamento-->
 		<section id="Regolamento" >
 			<div class="regolamento-content section-content">
 				<div class="container">
-					<h1>Regolamento</h1><br />
+					<h1 class="display-4">Regolamento</h1><br />
 					<p>
 						La Fondazione “Luigi Granese” e la Scuola di Musica “G.Visconti”, visto il perdurare dello stato di allerta dovuto al CORONAVIRUS,
 						<strong>
@@ -99,7 +100,8 @@
 						<div class="important">
 							<em>
 								<strong>
-									L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica <a href="http://www.salute.gov.it/nuovocoronavirus" target="_blank">Covid-19</a>, si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a Pres. Cons. Min. Dip. Prot. Civ. IBAN: IT84 Z030 6905 0201 0000 0066 387 BIC: BCITITMM con causale "Il Concorso Musicale Visconti non si ferma".
+									L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica <a href="http://www.salute.gov.it/nuovocoronavirus" target="_blank">Covid-19</a>, si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a: 
+									<br /><br /><span style="font-size:larger; color:black;">Pres. Cons. Min. Dip. Prot. Civ. <br />IBAN: IT84 Z030 6905 0201 0000 0066 387 <br />BIC: BCITITMM <br />Causale: "Il Concorso Musicale Visconti non si ferma"</span>
 								</strong>
 							</em>
 						</div>
@@ -118,40 +120,26 @@
 					</p>
 				</div>
 			</div>
+			<hr class="endsection" />
 		</section>
+		
 		<!--Commissione-->
 		<section id="Commissione">
 			<div class="commissione-content section-content">
 				<div class="container">
-					<h1>Commissione</h1><br />
+					<h1 class="display-4">Commissione</h1><br />
 					<div class="card-columns mt-5">
 						<div class="card">
 							<img class="card-img-top" src="img/commissione/claudio-bergamini.jpg" alt="Claudio Bergamini image">
 							<div class="card-body">
 								<h5 class="card-title">Claudio Bergamini</h5>
-								<p class="card-text">Claudio Bergamini si è diplomato in pianoforte a pieni voti presso il Conservatorio “S. Pietro a Majella” di Napoli sotto la guida di Carla Giudici. Ha proseguito il perfezionamento pianistico con Emma Contestabile presso il Cantiere Internazionale d’Arte di Montepulciano, ove ha partecipato all’esecuzione integrale delle sonate per pianoforte di Beethoven. Suoi insegnanti sono stati anche Bruno Canino, per l’approfondimento del repertorio in duo pianistico, e Dario De Rosa, per il perfezionamento in quello cameristico.
+								<p class="card-text">
+									Claudio Bergamini si è diplomato in pianoforte a pieni voti presso il Conservatorio “S. Pietro a Majella” di Napoli sotto la guida di Carla Giudici. Ha proseguito il perfezionamento pianistico con Emma Contestabile presso il Cantiere Internazionale d’Arte di Montepulciano, ove ha partecipato all’esecuzione integrale delle sonate per pianoforte di Beethoven. Suoi insegnanti sono stati anche Bruno Canino, per l’approfondimento del repertorio in duo pianistico, e Dario De Rosa, per il perfezionamento in quello cameristico.
 									Parallelamente agli studi pianistici, ha affiancato quello della composizione con Nazario Bellandi e della Musica corale e direzione di coro con Domenico Bartolucci. Successivamente ha conseguito la Laurea in Discipline musicali presso l’Università di Bologna, la Laurea specialistica  in Musicologia e Beni musicali presso l’Università  La Sapienza di Roma e il Diploma di secondo livello in Pianoforte presso il conservatorio “Lorenzo Perosi” di Campobasso.
 									Si è distinto in diversi concorsi pianistici nazionali e internazionali, tra i quali il Concorso internazionale di Gaeta (secondo classificato) e l’Ibla Grand Prize di Ragusa (premio speciale Fiuggi). Ha effettuato numerosi concerti come solista, in duo pianistico - con due pianoforti o a quattro mani - o in qualità di accompagnatore di cantanti e strumentisti, riscuotendo ovunque lusinghieri consensi di pubblico e di critica.
 									Dal 2005 collabora attivamente con l’Istituto polacco di Roma. In quell'anno è stato curatore e pianista accompagnatore della Conferenza-concerto dedicata alla Musica vocale da camera di Fryderyk Chopin, con la partecipazione del soprano Magdalena Aparta e della dott.ssa Matilde Spadaro, polonista. Nel 2007, per lo stesso istituto, ha tenuto un concerto dal titolo “Intorno a Chopin” che ha riscosso un considerevole successo di pubblico, e nel novembre 2008 è stato co-organizzatore e relatore di una lezione-concerto su Chopin, presso l'Istituto “Seraphicum” di Roma, dedicata agli alunni delle scuole ad indirizzo musicale della capitale. Quest'ultima iniziativa è stata più volte ripetuta nel corso dell'anno 2010, anno del bicentenario della nascita di Fryderyk Chopin.
 									Attento da sempre alle tematiche dell’insegnamento, ha conseguito il diploma di Didattica pianistica presso l’Accademia musicale pescarese, a conclusione di un corso biennale tenuto dal M° Piotr Lachert. E' autore di testi per la didattica pianistica distribuiti con libera licenza, ed ha tenuto corsi di aggiornamento per docenti, autorizzati dal Ministero dell’Istruzione. Ha insegnato per oltre venticinque anni pianoforte presso scuole medie ad indirizzo musicale di Roma, ed attualmente è Accompagnatore al pianoforte presso il Conservatorio di Musica di Cagliari.
 								</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-							</div>
-						</div>
-						<div class="card">
-							<img class="card-img-top" src="img/flute.jpg" alt="Rosanna Castorina image">
-							<div class="card-body">
-								<h5 class="card-title">Rosanna Castorina</h5>
-								<p class="card-text">Rosanna Castorina si è diplomata nel 1988 al Conservatorio di musica S. Cecilia di Roma sotto la guida del M° G. Graverini ottenendo il massimo dei voti. Successivamente si è perfezionata con i maestri M. Larrieu e A Nicolet. Ha frequentato i corsi di didattica della musica del M° L. Calì e di Musica da Camera del M° L. Cerroni. Ha svolto attività concertistica sia come solista che in formazioni di musica da camera e ha collaborato come primo flauto in varie orchestre sinfoniche. Ha registrato per varie case discografiche tra cui: RF, Vecchio Mulino, Edi Pan. Nel 1990 vince il concorso per esami e titoli per l'insegnamento dell'Educazione Musicale nella scuola media; nel 1992 vince il concorso per esami e titoli per l'insegnamento del flauto presso il conservatorio statale di musica. Svolge attività didattica dal 1988, è stata insegnante di flauto nei corsi ad indirizzo musicale delle scuole medie. Attualmente è docente di flauto presso il Conservatorio di Musica F. Torrefranca di Vibo Valentia.</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-							</div>
-						</div>
-						<div class="card">
-							<img class="card-img-top" src="img/commissione/giampiero-bruno.jpg" alt="Giampiero Bruno">
-							<div class="card-body">
-								<h5 class="card-title">Giampiero Bruno</h5>
-								<p class="card-text">Il pianista Giampiero Bruno si è brillantemente diplomato al Conservatorio di “S. Cecilia”  Roma sotto la guida del M° Benigno Benigni. Successivamente ha seguito i corsi di perfezionamento del M° Carlo Zecchi per il pianoforte e del M° Riccardo Brengola per la musica da camera. Con il M° Felx Ayo ha conseguito il diploma di perfezionamento in musica da camera presso l’Accademia Nazionale di “S. Cecilia” in Roma. E’ stato premiato in diversi concorsi pianistici tra i quali il XIV° concorso di Osimo, il III° concorso pianistico di Velletri, V° concorso pianistico Agorà ’80 ed il I° concorso pianistico internazionale Roma ’90. Ha svolto un’intensa attività concertistica in Italia e all’estero con notevoli consensi di critica e di pubblico sia come solista che in complessi cameristici. Giampiero Bruno ha tenuto concerti anche come clavicembalista in varie formazioni di musica barocca tra cui il <a href="file:///C:/My%20Web%20Sites/concorsovisconti/www.concorsovisconti.it/giampierobruno.html">Quartetto Guglielmi</a> con il quale ha effettuato registrazioni per la RAI, Radio Vaticana, New York Times radio e una importante tournèe negli Stati Uniti conclusasi con un concerto al Merkin Concert Hall di New York. Giampiero Bruno dal 1992 è direttore artistico del Concorso Musicale Nazionale “G. Visconti” manifestazione artistica rivolta a giovani interpreti italiani.</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 						<div class="card">
@@ -159,7 +147,20 @@
 							<div class="card-body">
 								<h5 class="card-title">Elio Girardi</h5>
 								<p class="card-text">Ha studiato con i Maestri Modesto Ricchi e Sergio Notaro.Si è diplomato con il massimo dei voti presso il Conservatorio “L. Refice” di Frosinone.Si è perfezionato con il M° Andrès Segovia a Madrid, Josè Luis Rodrigo a Madrid e Santiago de Compostela, con il M° Josè Tomàs a Roma.Ha coltivato anche gli studi tecnici conseguendo la laurea in Ingegneria presso l’Università “La Sapienza” a Roma.Ha svolto e tuttora svolge attività concertistica come solista e in musica da camera. Già titolare di cattedra di Chitarra presso l’Istituto di Alta Cultura Musicale “L. Refice” a Frosinone..</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+							</div>
+						</div>
+						<div class="card">
+							<img class="card-img-top" src="img/commissione/giampiero-bruno.jpg" alt="Giampiero Bruno">
+							<div class="card-body">
+								<h5 class="card-title">Giampiero Bruno</h5>
+								<p class="card-text">Il pianista Giampiero Bruno si è brillantemente diplomato al Conservatorio di “S. Cecilia”  Roma sotto la guida del M° Benigno Benigni. Successivamente ha seguito i corsi di perfezionamento del M° Carlo Zecchi per il pianoforte e del M° Riccardo Brengola per la musica da camera. Con il M° Felx Ayo ha conseguito il diploma di perfezionamento in musica da camera presso l’Accademia Nazionale di “S. Cecilia” in Roma. E’ stato premiato in diversi concorsi pianistici tra i quali il XIV° concorso di Osimo, il III° concorso pianistico di Velletri, V° concorso pianistico Agorà ’80 ed il I° concorso pianistico internazionale Roma ’90. Ha svolto un’intensa attività concertistica in Italia e all’estero con notevoli consensi di critica e di pubblico sia come solista che in complessi cameristici. Giampiero Bruno ha tenuto concerti anche come clavicembalista in varie formazioni di musica barocca tra cui il <a href="file:///C:/My%20Web%20Sites/concorsovisconti/www.concorsovisconti.it/giampierobruno.html">Quartetto Guglielmi</a> con il quale ha effettuato registrazioni per la RAI, Radio Vaticana, New York Times radio e una importante tournèe negli Stati Uniti conclusasi con un concerto al Merkin Concert Hall di New York. Giampiero Bruno dal 1992 è direttore artistico del Concorso Musicale Nazionale “G. Visconti” manifestazione artistica rivolta a giovani interpreti italiani.</p>
+							</div>
+						</div>
+						<div class="card">
+							<img class="card-img-top" src="img/flute.jpg" alt="Rosanna Castorina image">
+							<div class="card-body">
+								<h5 class="card-title">Rosanna Castorina</h5>
+								<p class="card-text">Rosanna Castorina si è diplomata nel 1988 al Conservatorio di musica S. Cecilia di Roma sotto la guida del M° G. Graverini ottenendo il massimo dei voti. Successivamente si è perfezionata con i maestri M. Larrieu e A Nicolet. Ha frequentato i corsi di didattica della musica del M° L. Calì e di Musica da Camera del M° L. Cerroni. Ha svolto attività concertistica sia come solista che in formazioni di musica da camera e ha collaborato come primo flauto in varie orchestre sinfoniche. Ha registrato per varie case discografiche tra cui: RF, Vecchio Mulino, Edi Pan. Nel 1990 vince il concorso per esami e titoli per l'insegnamento dell'Educazione Musicale nella scuola media; nel 1992 vince il concorso per esami e titoli per l'insegnamento del flauto presso il conservatorio statale di musica. Svolge attività didattica dal 1988, è stata insegnante di flauto nei corsi ad indirizzo musicale delle scuole medie. Attualmente è docente di flauto presso il Conservatorio di Musica F. Torrefranca di Vibo Valentia.</p>
 							</div>
 						</div>
 						<div class="card">
@@ -167,7 +168,6 @@
 							<div class="card-body">
 								<h5 class="card-title">Franco Presutti</h5>
 								<p class="card-text">Franco Presutti (Roma 1957) ha studiato al Conservatorio S. Cecilia di Roma diplomandosi in violino con Felix Ayo e in direzione d’orchestra con Bruno Aprea. Socio fondatore dell’Associazione musicale “Spettro Sonoro”, con il gruppo strumentale di questa ha tenuto concerti in Italia e all’estero curando anche prime esecuzioni. Spettro Sonoro ha inoltre curato la riproposizione moderna delle musiche del poeta E. Pound e del filosofo F. Nietzsche. Parallelamente si è occupato dell’esecuzione del repertorio del ‘600 e ‘700 con strumenti originali collaborando con gruppi italiani ed esteri come: Orchestra dell’Associazione Musicale Romana, Orchestra del Centro Italiano Musica Antica, Orchestra Barocca Italiana, Modo Antiquo, Cappella Palatina, Les musiciens du Louvre. Ha diretto le orchestre e i cori dell’Associazione Musicale Romana e del C. I. M. A. in programmi di musica sacra di A. Vivaldi, W. A. Mozart e F. J. Haydn.Insegna quartetto al conservatorio “L. Refice” di Frosinone.</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 						<div class="card">
@@ -175,46 +175,41 @@
 							<div class="card-body">
 								<h5 class="card-title">Marco Silvi</h5>
 								<p class="card-text">Violinista nato a Roma, diplomato sotto la guida di Lilia d’Albore presso il Conservatorio “S. Cecilia” di Roma.  Ha svolto attività concertistica collaborando con varie orchestre da camera sia come primo violino, sia come solista. Ha fatto parte di diverse formazioni cameristiche (duo, trio, quartetto...) con le quali ha suonato in Italia presso numerose istituzioni musicali in sedi di rilevanza storica e artistica (a Roma: “Oratorio del Gonfalone”, Sala Borromini, Castel S.Angelo, Sala Baldini, Palazzo della Cancelleria, Palazzo Spada, Aula Magna dell’Università “La Sapienza”, Auditorium RAI del “Foro Italico”, Discoteca di Stato; associazioni “Amici della Musica” di molte città, A.Gi.Mus., E.S.T.A. ecc.) e in occasione di varie manifestazioni (Todi festival, Musica nuova festival di Faenza, Ferrazzano festival, Festival musicale di Sarteano...). Ha vinto la “Selezione giovani concertisti 1982” indetta dall’ “Associazione amici di Castel S.Angelo” di Roma. Ha effettuato in quartetto una tournée negli USA conclusasi con un concerto alla “Merkin Concert Hall” di New York e si è esibito in diretta da una emittente radio americana.  In duo violino e chitarra ha tenuto una serie di concerti in alcune città del Brasile (Rio de Janeiro, Niteroi, Nova Friburgo) eseguendo brani di compositori italiani del XIX secolo. Ha effettuato registrazioni per RAI e Radio Vaticana e ha inciso come solista un CD di musica contemporanea per la Edipan. Si occupa inoltre dello studio della prassi esecutiva della musica dei secoli XVII e XVIII sul violino barocco basandosi su una lettura approfondita dei trattati e della letteratura dell’ epoca. Come violinista barocco ha tra l’ altro svolto attività artistica con il C.I.M.A. a Roma, col gruppo francese “Ensemble Musica Antiqua” a Tolone, ha effettuato una tournée in Spagna con l’ “Accademia Romana Strumentale” (musiche di Monteverdi e Falconieri eseguite a Madrid e Segovia) e collabora con il “Pontificio Istituto di Musica Sacra” di Roma. E’ titolare di una  cattedra  di  violino  presso  il  Conservatorio  di  Musica  “L.Refice” di Frosinone.</p>
-								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<hr class="endsection" />
 		</section>
 
 		<!--Iscrizione-->
 		<section id="Iscrizione">
 			<div class="iscrizione-content section-content">
 				<div class="container">
-					<h1>Iscrizione</h1><br />
-					<p></p>
+					<div class="jumbotron text-center shadow">
+						<h1 class="display-4">Iscriviti ora!</h1>
+						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, libero. Voluptas impedit harum cumque maiores. Consectetur aut eveniet totam est nisi veritatis? Est modi nisi vero. Nobis molestias voluptatibus quaerat.</p>
+						<a class="btn btn-success" href="files/SCHEDA ISCRIZIONE Word.docx" role="button">Scarica il modulo</a>
+					</div>
 				</div>
 			</div>
+			<hr class="endsection" />
 		</section>
 
-		<!--Carousel-->
-		<!--<section id="carousel">
-				<div id="carousel-home" class="carousel slide carousel-fade" data-ride="carousel">
-						<ol class="carousel-indicators">
-								<li data-target="#carousel-home" data-slide-to="0" class="active"></li>
-								<li data-target="#carousel-home" data-slide-to="1"></li>
-								<li data-target="#carousel-home" data-slide-to="2"></li>
-						</ol>
-						<div class="carousel-inner">
-								<div class="carousel-item active">
-										<img class="d-block w-100" src="img/chords-sheet-on-piano.jpg" alt="piano">
-								</div>
-								<div class="carousel-item">
-										<img class="d-block w-100" src="img/brass.jpg" alt="brass">
-								</div>
-								<div class="carousel-item">
-										<img class="d-block w-100" src="img/string-instrument.jpg" alt="violin">
-								</div>
-						</div>
+		<!--Premi-->
+		<section id="Premi">
+			<div class="premi-content section-content">
+				<div class="container">
+					<h1 class="display-4">Premi</h1><br />
+					<p>
+						Tutti i solisti vincitori assoluti parteciperanno a un concerto nell'ambito della stagione concertistica i Incontri Musicali del Visconti 2021.						Verranno assegnati i diplomi di I premio (punteggio 95-100), II premio (punteggio 90-94), III premio (punteggio 85-89) a tutti i partecipanti delle sezioni: A e C. A tutti gli altri partecipanti verrà assegnato un diploma di partecipazione.Verrà assegnato un diploma alla scuola che avrà partecipato con il maggior numero di allievi premiati.Verrà assegnato un diploma all’insegnante che avrà partecipato con il maggior numero di allievi premiati.Tutti i diplomi verranno inviati online.
+					</p>
 				</div>
-		</section>-->
-
+			</div>
+			<!--<hr class="endsection" />-->
+		</section>
+		
 		<!--Footer-->
 		<footer id="footer-main">
 			<div class="container">
