--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 						<a class="nav-link js-scroll-trigger" href="#Commissione">Commissione</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#Iscrizione">Iscrizione</a>
+						<a class="nav-link js-scroll-trigger" href="#Premi">Premi</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#Premi">Premi</a>
+						<a class="nav-link js-scroll-trigger" href="#Iscrizione">Iscrizione</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link in-construzione" data-toggle="tooltip" title="In construzione!">Concerti</a>
@@ -186,6 +186,50 @@
 				<hr class="endsection" />
 			</section>
 
+			<!--Premi-->
+			<section id="Premi">
+				<div class="premi-content section-content">
+					<div class="container">
+						<h1 class="display-4">Premi</h1><br />
+						<h5 >
+							Tutti i solisti vincitori assoluti parteciperanno a un concerto nell'ambito della stagione concertistica "Incontri Musicali del Visconti 2021"
+						</h5>
+						<div class="row ">
+							<div class="col-md-4 ">
+								<img class="mx-auto my-4 d-block" src="img/icons/award.svg" alt="award" width="250" height="200"/>
+								<p>
+									Per tutti i partecipanti alle sezioni A e C verranno assegnati i diplomi di:
+                                    <ul>
+										<li>I premio (punteggio 95-100)</li>
+										<li>II premio (punteggio 90-94)</li>
+										<li>III premio (punteggio 85-89)</li>
+                                    </ul>
+								</p>
+							</div>
+							<div class="col-md-4">
+								<img class="mx-auto my-4 d-block" src="img/icons/graduation-cap.svg" alt="graduation cap" width="250" height="200"/>
+									<ul>
+										<li>
+											Verrà assegnato un diploma alla scuola che avrà partecipato con il maggior numero di allievi premiati.
+										</li>
+										<li>
+											Verrà assegnato un diploma all’insegnante che avrà partecipato con il maggior numero di allievi premiati.
+										</li>
+									</ul>
+							</div>
+							<div class="col-md-4">
+								<img class="mx-auto my-4 d-block" src="img/icons/certificate.svg" alt="certificate" width="250" height="200"/>
+								<p>
+									A tutti gli altri partecipanti verrà assegnato un diploma di partecipazione.
+								</p>
+							</div>
+						</div>
+						<h6 class="text-muted my-4">Tutti i diplomi verranno inviati online.</h6>
+					</div>
+				</div>
+				<hr class="endsection" />
+			</section>
+
 			<!--Iscrizione-->
 			<section id="Iscrizione">
 				<div class="iscrizione-content section-content">
@@ -195,19 +239,6 @@
 							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, libero. Voluptas impedit harum cumque maiores. Consectetur aut eveniet totam est nisi veritatis? Est modi nisi vero. Nobis molestias voluptatibus quaerat.</p>
 							<a class="btn btn-success" href="files/SCHEDA ISCRIZIONE Word.docx" role="button">Scarica il modulo</a>
 						</div>
-					</div>
-				</div>
-				<hr class="endsection" />
-			</section>
-
-			<!--Premi-->
-			<section id="Premi">
-				<div class="premi-content section-content">
-					<div class="container">
-						<h1 class="display-4">Premi</h1><br />
-						<p>
-							Tutti i solisti vincitori assoluti parteciperanno a un concerto nell'ambito della stagione concertistica i Incontri Musicali del Visconti 2021.						Verranno assegnati i diplomi di I premio (punteggio 95-100), II premio (punteggio 90-94), III premio (punteggio 85-89) a tutti i partecipanti delle sezioni: A e C. A tutti gli altri partecipanti verrà assegnato un diploma di partecipazione.Verrà assegnato un diploma alla scuola che avrà partecipato con il maggior numero di allievi premiati.Verrà assegnato un diploma all’insegnante che avrà partecipato con il maggior numero di allievi premiati.Tutti i diplomi verranno inviati online.
-						</p>
 					</div>
 				</div>
 				<!--<hr class="endsection" />-->
@@ -234,6 +265,7 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<!--Custom js script-->
 		<script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
