--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			</div>
 		</header>
 
-		<main id="main" data-spy="scroll" data-target="#nav-main" data-offset="0">
-
+		<main id="main">
+			<!--data-spy="scroll" data-target="#nav-main" data-offset="0"-->
 			<!--Regolamento-->
 			<section id="Regolamento">
 				<div class="regolamento-content section-content">
@@ -191,24 +191,25 @@
 				<div class="premi-content section-content">
 					<div class="container">
 						<h1 class="display-4">Premi</h1><br />
-						<h5 >
+						<h5>
 							Tutti i solisti vincitori assoluti parteciperanno a un concerto nell'ambito della stagione concertistica "Incontri Musicali del Visconti 2021"
 						</h5>
 						<div class="row ">
 							<div class="col-md-4 ">
-								<img class="mx-auto my-4 d-block" src="img/icons/award.svg" alt="award" width="250" height="200"/>
+								<img class="mx-auto my-4 d-block" src="img/icons/award.svg" alt="award" width="250" height="190" />
 								<p>
 									Per tutti i partecipanti alle sezioni A e C verranno assegnati i diplomi di:
-                                    <ul>
+									<ul>
 										<li>I premio (punteggio 95-100)</li>
 										<li>II premio (punteggio 90-94)</li>
 										<li>III premio (punteggio 85-89)</li>
-                                    </ul>
+									</ul>
 								</p>
 							</div>
 							<div class="col-md-4">
-								<img class="mx-auto my-4 d-block" src="img/icons/graduation-cap.svg" alt="graduation cap" width="250" height="200"/>
-									<ul>
+								<img class="mx-auto my-4 d-block" src="img/icons/graduation-cap.svg" alt="graduation cap" width="250" height="190" />
+								<p>
+									<ul style="font-size:larger">
 										<li>
 											Verrà assegnato un diploma alla scuola che avrà partecipato con il maggior numero di allievi premiati.
 										</li>
@@ -216,15 +217,16 @@
 											Verrà assegnato un diploma all’insegnante che avrà partecipato con il maggior numero di allievi premiati.
 										</li>
 									</ul>
+								</p>
 							</div>
 							<div class="col-md-4">
-								<img class="mx-auto my-4 d-block" src="img/icons/certificate.svg" alt="certificate" width="250" height="200"/>
+								<img class="mx-auto my-4 d-block" src="img/icons/certificate.svg" alt="certificate" width="250" height="190" />
 								<p>
 									A tutti gli altri partecipanti verrà assegnato un diploma di partecipazione.
 								</p>
 							</div>
 						</div>
-						<h6 class="text-muted my-4">Tutti i diplomi verranno inviati online.</h6>
+						<h5 class="alert alert-danger my-1">Tutti i diplomi verranno inviati online.</h5>
 					</div>
 				</div>
 				<hr class="endsection" />
@@ -243,6 +245,7 @@
 				</div>
 				<!--<hr class="endsection" />-->
 			</section>
+
 		</main>
 
 		<!--Footer-->
