Realizza un Video section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</ul>
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-danger" href="#">Realizza un video!</a>
+						<a class="nav-link btn btn-outline-danger" href="#Video">Realizza un video!</a>
 					</li>
 				</ul>
 			</div>
@@ -244,6 +244,28 @@
 					</div>
 				</div>
 				<!--<hr class="endsection" />-->
+			</section>
+
+			<!--Video-->
+			<section id="Video">
+				<div class="video-content section-content">
+					<div class="container d-flex h-100">
+						<div id="panel" class="mx-auto">
+							<h1 class="display-3 text-center align-items-center">ISTRUZIONI PER LA REALIZZAZIONE DEL VIDEO</h1>
+							<p>
+								<ol>
+									<li>Il video può essere realizzato con Smartphone, iPhone, Tablet o qualsiasi altro supporto per registrare</li>
+									<li>Deve essere realizzato un unico video</li>
+									<li>Il video deve essere live e non modificato con programmi di audio/video editing</li>
+									<li>Il video non deve superare i 5 minuti</li>
+									<li>Possono essere registrati non più di due brani</li>
+									<li>Il video deve  inquadrare esecutore, mani e strumento</li>
+									<li>L'esecutore prima di iniziare l'esecuzione deve registrare il suo nome, la classe frequentata, i brani che eseguirà e la data della registrazione</li>
+								</ol>
+							</p>
+						</div>
+					</div>
+				</div>
 			</section>
 
 		</main>
