Changes on Footer and Video section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</ul>
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-danger" href="#Video">Realizza un video!</a>
+						<a class="nav-link btn btn-outline-danger js-scroll-trigger" href="#Video">Realizza un video!</a>
 					</li>
 				</ul>
 			</div>
@@ -82,7 +82,7 @@
 							La Fondazione “Luigi Granese” e la Scuola di Musica “G.Visconti”, visto il perdurare dello stato di allerta dovuto al CORONAVIRUS,
 							<strong>
 								modificano il  XXVIII Concorso Musicale precedentemente bandito, per l’anno 2020,
-								con una versione <a href="#">ONLINE</a>.
+								con una versione <a href="#Video">ONLINE</a>.
 							</strong>
 						</p>
 						<p>
@@ -251,7 +251,7 @@
 				<div class="video-content section-content">
 					<div class="container d-flex h-100">
 						<div id="panel" class="mx-auto">
-							<h1 class="display-3 text-center align-items-center">ISTRUZIONI PER LA REALIZZAZIONE DEL VIDEO</h1>
+							<h1 class="display-4 text-center align-items-center">ISTRUZIONI PER LA REALIZZAZIONE DEL VIDEO</h1>
 							<p>
 								<ol>
 									<li>Il video può essere realizzato con Smartphone, iPhone, Tablet o qualsiasi altro supporto per registrare</li>
@@ -273,7 +273,7 @@
 		<!--Footer-->
 		<footer id="footer-main">
 			<div class="container">
-				<hr />
+				<!--<hr />-->
 				<div class="row">
 					<div class="col-sm-9">
 						<p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
