--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<!-- Lux theme-->
 		<link rel="stylesheet" href="css/lux/bootstrap.css" />
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/lib/fontawesome-free-5.13.0-web/css/all.css" />
-		<link href="css/lib/fontawesome-free-5.13.0-web/js/all.js" />
+		<link rel="stylesheet" href="css/lib/fontawesome-free-5.13.0-web/css/all.min.css" />
+		<link href="css/lib/fontawesome-free-5.13.0-web/js/all.min.js" />
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
