New background for Video

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!--Main Header-->
 		<header class="masterhead">
 			<div class="container d-flex align-items-center h-100 ">
-				<div id="panel" class="mx-auto text-center">
+				<div id="panel-masterhead" class="mx-auto text-center">
 					<p>
 						<h1 class="display-4">XXVIII Concorso Musicale</h1>
 					</p>
@@ -250,7 +250,7 @@
 			<section id="Video">
 				<div class="video-content section-content">
 					<div class="container d-flex h-100">
-						<div id="panel" class="mx-auto">
+						<div id="panel-video" class="mx-auto">
 							<h1 class="display-4 text-center align-items-center">ISTRUZIONI PER LA REALIZZAZIONE DEL VIDEO</h1>
 							<p>
 								<ol>
