New test for Iscrizione

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					<div class="container">
 						<div class="jumbotron text-center shadow">
 							<h1 class="display-4">Iscriviti ora!</h1>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, libero. Voluptas impedit harum cumque maiores. Consectetur aut eveniet totam est nisi veritatis? Est modi nisi vero. Nobis molestias voluptatibus quaerat.</p>
+							<p class="lead">Riservato agli alunni delle scuole medie ad indirizzo musicale, ex alunni e alunni dei licei musicali e ai gruppi corali di tutte le scuole medie. Scarica la scheda d'iscrizione!</p>
 							<a class="btn btn-success" href="files/SCHEDA ISCRIZIONE Word.docx" role="button">Scarica il modulo</a>
 						</div>
 					</div>
