Facebook link on footer

--- a/index.html
+++ b/index.html
@@ -279,7 +279,14 @@
 						<p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
 					</div>
 					<div class="col-sm-3">
-						<h3>Contattaci&nbsp;<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI"><i class="fas fa-envelope"></i></a></h3>
+						<h3>Contattaci&nbsp;
+							<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
+								<i class="fas fa-envelope"></i>
+							</a>
+							<a href="https://www.facebook.com/concorso.visconti" target="_blank">
+								<i class="fab fa-facebook-square"></i>
+							</a>
+						</h3>
 					</div>
 				</div>
 			</div>
