Minor change on footer

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					<div class="col-sm-6">
 						<p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-6 d-flex justify-content-end">
 						<h3>Contattaci&nbsp;
 							<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
 								<i class="fas fa-envelope"></i>
