--- a/index.html
+++ b/index.html
@@ -279,10 +279,12 @@
 						<p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
 					</div>
 					<div class="col-sm-6 d-flex justify-content-end">
-						<h3>Contattaci&nbsp;
+						<h3>
+							Contattaci&nbsp;
 							<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
 								<i class="fas fa-envelope"></i>
 							</a>
+							&nbsp;
 							<a href="https://www.facebook.com/concorso.visconti" target="_blank">
 								<i class="fab fa-facebook-square"></i>
 							</a>
