No decoration for link on footer

--- a/index.html
+++ b/index.html
@@ -281,10 +281,9 @@
 					<div class="col-sm-6 d-flex justify-content-end">
 						<h3>
 							Contattaci&nbsp;
-							<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
+							<a class="no-underscore"href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
 								<i class="fas fa-envelope"></i>
 							</a>
-							&nbsp;
 							<a href="https://www.facebook.com/concorso.visconti" target="_blank">
 								<i class="fab fa-facebook-square"></i>
 							</a>
