Final touch on footer

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<div class="col-sm-6 d-flex justify-content-end">
 						<h3>
 							Contattaci&nbsp;
-							<a class="no-underscore"href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
+							<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI">
 								<i class="fas fa-envelope"></i>
 							</a>
 							<a href="https://www.facebook.com/concorso.visconti" target="_blank">
